--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bali Whispers by Elena Molchanova</title>
+  <title>Elena Molchanova | Storyteller And Maker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="Crochet dreams for neon lovers">
+  <meta name="description" content="Elena Molchanova is a storyteller, an aspiring author, and a maker.">
   <meta name="author" content="Elena Molchanova">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
